[gd_scene load_steps=6 format=3 uid="uid://cl0lehberr1f4"]

[ext_resource type="Texture2D" uid="uid://ct2dv18pmacbr" path="res://AngryAnimals (1)/assets/ui/panel_beige.png" id="1_b0esd"]
[ext_resource type="FontFile" uid="uid://bltiy45fvwdys" path="res://AngryAnimals (1)/assets/fonts/LuckiestGuy-Regular.ttf" id="2_joesm"]
[ext_resource type="Script" path="res://panel.gd" id="2_jxxaw"]

[sub_resource type="LabelSettings" id="LabelSettings_l7rk1"]
font = ExtResource("2_joesm")
font_size = 48
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.419608)

[sub_resource type="LabelSettings" id="LabelSettings_2ng14"]
font = ExtResource("2_joesm")
font_size = 24
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.419608)

[node name="TextureButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_b0esd")
script = ExtResource("2_jxxaw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "3"
label_settings = SubResource("LabelSettings_l7rk1")

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "1000"
label_settings = SubResource("LabelSettings_2ng14")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
